# projekt

./: .gitignore
project/: CMakeLists.txt
project/include/: Basic.h  Bishop.h  Board.h  Checker.h  Field.h  Game.h  Interface.h  King.h  Player.h  Rook.h  TextInterface.h  Timed.h  Unit.h  typedefs.h
project/src/: Basic.cpp  Bishop.cpp  Board.cpp  Checker.cpp  Field.cpp  Game.cpp  Interface.cpp  King.cpp  Player.cpp  Rook.cpp  TextInterface.cpp  Timed.cpp  Unit.cpp  main.cpp
wardyn/CarRental/program/src/: main.cpp
wardyn/Introduction/program/: CMakeLists.txt
wardyn/introduction/: CMakeLists.txt
wardyn/introduction/program/src/: main.cpp
wardyn/workshop/: CMakeLists.txt
wardyn/workshop/CarRental/: CMakeLists.txt
wardyn/workshop/CarRental/program/: CMakeLists.txt
wardyn/workshop/CarRental/program/src/: main.cpp
wardyn/workshop/program/: CMakeLists.txt
wardyn/workshop/program/src/: main.cpp
ziemecki/introduction/: CMakeLists.txt
ziemecki/introduction/program/: CMakeLists.txt
ziemecki/introduction/program/src/: main.cpp
ziemecki/workshop/: CMakeLists.txt
ziemecki/workshop/CarRental/: CMakeLists.txt
ziemecki/workshop/CarRental/program/src/: main.cpp
ziemecki/workshop/program/: CMakeLists.txt
ziemecki/workshop/program/src/: main.cpp
